--- a/HTML5_and_CSS3/07-Omnifood/index.html
+++ b/HTML5_and_CSS3/07-Omnifood/index.html
@@ -5,10 +5,8 @@
     <meta
       name="description"
       content="Omnifood ia an AI powered foos subscrption that will make you eat healhty again, 365 days per year. It is tailered to your personal tastes and nutritionl needs."
-      <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0"
     />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Omnifood &dash; Never cook again!</title>
     <link rel="stylesheet" href="CSS/style.css" />
     <link rel="stylesheet" href="CSS/general.css" />
@@ -33,9 +31,7 @@
       defer
       src=" https://unpkg.com/smoothscroll-polyfill@0.4.4/dist/smoothscroll.min.js"
     ></script>
-    <script defer src="js/script.js">
-      S
-    </script>
+    <script defer src="js/script.js"></script>
   </head>
   <body>
     <header class="header">
